[project]
name = "delve-taxonomy"
version = "0.2.0"
description = "AI-powered taxonomy generation for your data"
authors = [
    { name = "Andres Torres", email = "torres.andres87@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["taxonomy", "classification", "nlp", "ai", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    # LangChain stack: pinned to the tested 1.x line, capped below the next major
    # so a breaking release can't be pulled in silently.
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-anthropic>=1.4,<2",
    "langchain-openai>=1.3,<2",
    "langsmith>=0.8,<1",
    "python-dotenv>=1.0.1",
    "click>=8.1.0",
    "pandas>=2.0.0,<3",
    "jsonpath-ng>=1.6.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0,<2",
    "joblib>=1.3.0",
]

[project.scripts]
delve = "delve.cli.main:cli"

[project.optional-dependencies]
dev = [
    # Linters pinned exactly so local and CI never disagree on the lint/type surface.
    "mypy==2.1.0",
    "ruff==0.15.17",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
notebook = [
    "nest-asyncio>=1.5.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Keep classic Optional[...] style, consistent with UP006/UP007 above.
    "UP045",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require API keys)",
]
